@@ -34,7 +34,6 @@ namespace KGySoft.Drawing.ImagingTools.ViewModel
         internal bool AutoZoom { get => Get(true); set => Set(value); }
         internal bool SmoothZooming { get => Get(true); set => Set(value); }
         internal bool ShowOriginal { get => Get<bool>(); set => Set(value); }
-        internal bool ZoomEnabled { get => Get<bool>(); set => Set(value); }
         internal bool ShowOriginalEnabled { get => Get(true); set => Set(value); }
 
         #endregion
@@ -55,9 +54,6 @@ namespace KGySoft.Drawing.ImagingTools.ViewModel
                 case nameof(OriginalImage):
                     if (ShowOriginal)
                         DisplayImage = PreviewImage;
-                    return;
-                case nameof(DisplayImage):
-                    ZoomEnabled = e.NewValue != null;
                     return;
                 case nameof(ShowOriginal):
                     DisplayImage = e.NewValue is true ? OriginalImage : PreviewImage;
